--- a/RetamDatabase/src/main/resources/fxml/MainScene.fxml
+++ b/RetamDatabase/src/main/resources/fxml/MainScene.fxml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml" fx:controller="fundabitat.retam.controllers.FXMLController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fundabitat.retam.controllers.FXMLController">
+   <children>
+      <TableView focusTraversable="false" maxWidth="-Infinity" prefHeight="521.0" prefWidth="800.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="99.0">
+        <columns>
+          <TableColumn editable="false" minWidth="150.0" prefWidth="200.0" text="Código Proyecto" />
+          <TableColumn editable="false" minWidth="150.0" prefWidth="400.0" text="Nombre del Proyecto" />
+            <TableColumn editable="false" minWidth="120.0" prefWidth="200.0" text="País" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <ToolBar focusTraversable="false" prefHeight="80.0" prefWidth="800.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <items>
+          <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0" text="Button" />
+            <Button layoutX="10.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0" text="Button" />
+        </items>
+      </ToolBar>
+   </children>
 </AnchorPane>
