--- a/RetamDatabase/src/main/resources/fxml/MainScene.fxml
+++ b/RetamDatabase/src/main/resources/fxml/MainScene.fxml
@@ -10,16 +10,6 @@
 
 <AnchorPane id="AnchorPane" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fundabitat.retam.controllers.MainController">
    <children>
-      <TableView fx:id="projectTable" focusTraversable="false" maxWidth="-Infinity" prefHeight="521.0" prefWidth="800.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="104.0">
-        <columns>
-          <TableColumn fx:id="projectCode" editable="false" minWidth="150.0" prefWidth="200.0" text="Código Proyecto" />
-          <TableColumn fx:id="projectName" editable="false" minWidth="150.0" prefWidth="400.0" text="Nombre del Proyecto" />
-            <TableColumn fx:id="projectCountry" editable="false" minWidth="120.0" prefWidth="200.0" text="País" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
       <ToolBar focusTraversable="false" prefHeight="85.0" prefWidth="800.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <items>
           <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0">
@@ -40,5 +30,19 @@
                </graphic></Button>
         </items>
       </ToolBar>
+      <AnchorPane layoutY="85.0" prefHeight="463.0" prefWidth="680.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="85.0">
+         <children>
+            <TableView fx:id="projectTable" focusTraversable="false" maxWidth="-Infinity" prefHeight="521.0" prefWidth="800.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+              <columns>
+                <TableColumn fx:id="projectCode" editable="false" minWidth="150.0" prefWidth="200.0" text="Código Proyecto" />
+                <TableColumn fx:id="projectName" editable="false" minWidth="150.0" prefWidth="400.0" text="Nombre del Proyecto" />
+                  <TableColumn fx:id="projectCountry" editable="false" minWidth="120.0" prefWidth="200.0" text="País" />
+              </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
