--- a/RetamDatabase/src/main/resources/fxml/MainScene.fxml
+++ b/RetamDatabase/src/main/resources/fxml/MainScene.fxml
@@ -1,48 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="AnchorPane" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fundabitat.retam.controllers.MainController">
-   <children>
-      <ToolBar focusTraversable="false" prefHeight="85.0" prefWidth="800.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-        <items>
-          <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0">
-               <graphic>
-                  <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/projectIcon.png" />
-                     </image>
-                  </ImageView>
-               </graphic></Button>
-            <Button layoutX="10.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0">
-               <graphic>
-                  <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/organizationIcon.png" />
-                     </image>
-                  </ImageView>
-               </graphic></Button>
-        </items>
-      </ToolBar>
-      <AnchorPane layoutY="85.0" prefHeight="463.0" prefWidth="680.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="85.0">
-         <children>
-            <TableView fx:id="projectTable" focusTraversable="false" maxWidth="-Infinity" prefHeight="521.0" prefWidth="800.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
-              <columns>
-                <TableColumn fx:id="projectCode" editable="false" minWidth="150.0" prefWidth="200.0" text="Código Proyecto" />
-                <TableColumn fx:id="projectName" editable="false" minWidth="150.0" prefWidth="400.0" text="Nombre del Proyecto" />
-                  <TableColumn fx:id="projectCountry" editable="false" minWidth="120.0" prefWidth="200.0" text="País" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-         </children>
-      </AnchorPane>
-   </children>
+    <children>
+        <ToolBar focusTraversable="false" prefHeight="85.0" prefWidth="800.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <items>
+                <Button fx:id="projectButton" mnemonicParsing="false" onAction="#onActionProjectButton" prefHeight="64.0" prefWidth="64.0">
+                    <graphic>
+                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../images/projectIcon.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+                <Button layoutX="10.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0">
+                    <graphic>
+                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../images/organizationIcon.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </Button>
+            </items>
+        </ToolBar>
+        <AnchorPane fx:id="content" layoutY="85.0" prefHeight="463.0" prefWidth="680.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="85.0">
+        </AnchorPane>
+    </children>
 </AnchorPane>
