--- a/RetamDatabase/src/main/resources/fxml/MainScene.fxml
+++ b/RetamDatabase/src/main/resources/fxml/MainScene.fxml
@@ -10,7 +10,7 @@
     <children>
         <ToolBar focusTraversable="false" prefHeight="85.0" prefWidth="800.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <items>
-                <Button fx:id="projectButton" mnemonicParsing="false" onAction="#onActionProjectButton" prefHeight="64.0" prefWidth="64.0">
+                <Button mnemonicParsing="false" onAction="#onActionProjectButton" prefHeight="64.0" prefWidth="64.0">
                     <graphic>
                         <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -19,7 +19,7 @@
                         </ImageView>
                     </graphic>
                 </Button>
-                <Button layoutX="10.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0">
+                <Button layoutX="10.0" layoutY="12.0" mnemonicParsing="false" onAction="#onActionOrganizationButton" prefHeight="64.0" prefWidth="64.0">
                     <graphic>
                         <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                             <image>
