--- a/RetamDatabase/src/main/resources/fxml/projectScene/ProjectInfo.fxml
+++ b/RetamDatabase/src/main/resources/fxml/projectScene/ProjectInfo.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -44,6 +46,11 @@
                                         <Font size="14.0" />
                                     </font>
                                 </Label>
+                                <Accordion fx:id="descriptorsAccordion" focusTraversable="false" layoutX="25.0" layoutY="128.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="125.0">
+                                    <panes>
+                                        <TitledPane animated="false" collapsible="false" expanded="false" focusTraversable="false" text="Descriptores" />
+                                    </panes>
+                                </Accordion>
                             </children>
                         </AnchorPane>
                     </content>
