--- a/RetamDatabase/src/main/resources/fxml/projectScene/ProjectScene.fxml
+++ b/RetamDatabase/src/main/resources/fxml/projectScene/ProjectScene.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="fundabitat.retam.controllers.ProjectSceneController">
+<AnchorPane id="AnchorPane" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fundabitat.retam.controllers.projectScene.ProjectSceneController">
     <children>
         <ToolBar focusTraversable="false" prefHeight="85.0" prefWidth="800.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <items>
-                <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0">
+                <Button mnemonicParsing="false" onAction="#onActionProjectButton" prefHeight="64.0" prefWidth="64.0">
                     <graphic>
                         <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -19,7 +19,7 @@
                         </ImageView>
                     </graphic>
                 </Button>
-                <Button layoutX="10.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0">
+                <Button layoutX="10.0" layoutY="12.0" mnemonicParsing="false" onAction="#onActionOrganizationButton" prefHeight="64.0" prefWidth="64.0">
                     <graphic>
                         <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                             <image>
