--- a/RetamDatabase/src/main/resources/fxml/ProjectHome.fxml
+++ b/RetamDatabase/src/main/resources/fxml/ProjectHome.fxml
@@ -27,7 +27,7 @@
             </font>
         </Label>
         <Separator layoutY="96.0" prefHeight="0.0" prefWidth="271.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-        <Button fx:id="searchProjectBtn" layoutX="550.0" layoutY="453.0" mnemonicParsing="false" text="Buscar Proyecto" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+        <Button fx:id="searchProjectBtn" layoutX="550.0" layoutY="453.0" mnemonicParsing="false" onAction="#onActionSearchButton" text="Buscar Proyecto" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0" />
         <Button fx:id="listAllBtn" layoutX="425.0" layoutY="453.0" mnemonicParsing="false" text="Listar Todos" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="160.0" />
         <Button fx:id="backBtn" layoutX="51.0" layoutY="453.0" mnemonicParsing="false" text="Regresar" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
         <GridPane layoutX="28.0" layoutY="132.0" prefHeight="87.0" prefWidth="379.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="120.0">
