--- a/RetamDatabase/src/main/resources/fxml/MainScene.fxml
+++ b/RetamDatabase/src/main/resources/fxml/MainScene.fxml
@@ -1,36 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 
-<AnchorPane id="AnchorPane" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fundabitat.retam.controllers.MainController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fundabitat.retam.controllers.MainSceneController">
     <children>
-        <ToolBar focusTraversable="false" prefHeight="85.0" prefWidth="800.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-            <items>
-                <Button mnemonicParsing="false" onAction="#onActionProjectButton" prefHeight="64.0" prefWidth="64.0">
-                    <graphic>
-                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../images/projectIcon.png" />
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
-                <Button layoutX="10.0" layoutY="12.0" mnemonicParsing="false" onAction="#onActionOrganizationButton" prefHeight="64.0" prefWidth="64.0">
-                    <graphic>
-                        <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../images/organizationIcon.png" />
-                            </image>
-                        </ImageView>
-                    </graphic>
-                </Button>
-            </items>
-        </ToolBar>
-        <AnchorPane fx:id="content" layoutY="85.0" prefHeight="463.0" prefWidth="680.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="85.0">
-        </AnchorPane>
+        <StackPane fx:id="stackPane" layoutX="255.0" layoutY="134.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
     </children>
 </AnchorPane>
