--- a/RetamDatabase/src/main/resources/fxml/ProjectTable.fxml
+++ b/RetamDatabase/src/main/resources/fxml/ProjectTable.fxml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="463.0" prefWidth="680.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fundabitat.retam.controllers.ProjectTableController">
     <children>
-        <TableView fx:id="projectTable" focusTraversable="false" maxWidth="-Infinity" onMouseClicked="#onClickProject" prefHeight="521.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <ImageView fitHeight="76.0" fitWidth="76.0" layoutX="22.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="15.0">
+            <image>
+                <Image url="@../images/projectIcon.png" />
+            </image>
+        </ImageView>
+        <Label layoutX="134.0" layoutY="21.0" prefHeight="62.0" prefWidth="372.0" text="Búsqueda de Proyectos" AnchorPane.leftAnchor="115.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+            <font>
+                <Font size="36.0" />
+            </font>
+        </Label>
+        <Separator layoutY="96.0" prefHeight="0.0" prefWidth="271.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+        <Button fx:id="backBtn" layoutX="51.0" layoutY="453.0" mnemonicParsing="false" onAction="#onActionBackButton" text="Regresar" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
+        <TableView fx:id="projectTable" focusTraversable="false" maxWidth="-Infinity" onMouseClicked="#onClickProject" prefHeight="521.0" prefWidth="800.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="120.0">
             <columns>
                 <TableColumn fx:id="projectCode" editable="false" minWidth="150.0" prefWidth="200.0" text="Código Proyecto" />
                 <TableColumn fx:id="projectName" editable="false" minWidth="150.0" prefWidth="400.0" text="Nombre del Proyecto" />
