--- a/RetamDatabase/src/main/resources/fxml/Home.fxml
+++ b/RetamDatabase/src/main/resources/fxml/Home.fxml
@@ -6,47 +6,56 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fundabitat.retam.controllers.HomeController">
     <children>
-        <ScrollPane fx:id="scrollPane" fitToWidth="true" hbarPolicy="NEVER" layoutX="49.0" layoutY="236.0" prefHeight="214.0" prefWidth="539.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <ScrollPane fx:id="scrollPane" fitToWidth="true" hbarPolicy="NEVER" layoutX="49.0" layoutY="236.0" prefHeight="214.0" prefWidth="539.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <content>
                 <AnchorPane fx:id="container" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="634.0">
                     <children>
-                        <Button layoutX="27.0" layoutY="261.0" mnemonicParsing="false" onAction="#onProjectClick" prefHeight="64.0" prefWidth="64.0">
-                            <graphic>
-                                <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../images/projectIcon.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                        </Button>
-                        <Button layoutX="28.0" layoutY="366.0" mnemonicParsing="false" onAction="#onOrganizationClick" prefHeight="64.0" prefWidth="64.0">
-                            <graphic>
-                                <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../images/organizationIcon.png" />
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                        </Button>
-                        <ImageView fx:id="banner" fitHeight="318.0" fitWidth="635.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="0.0">
-                            <image>
-                                <Image url="@../images/banner.png" />
-                            </image>
-                        </ImageView>
-                        <Label layoutX="138.0" layoutY="261.0" text="Proyectos">
-                            <font>
-                                <Font name="System Bold" size="14.0" />
-                            </font>
-                        </Label>
-                        <Label layoutX="138.0" layoutY="366.0" text="Instituciones Ejecutoras">
-                            <font>
-                                <Font name="System Bold" size="14.0" />
-                            </font>
-                        </Label>
+                  <HBox fx:id="bannerBox" alignment="TOP_CENTER" layoutX="365.0" layoutY="250.0" maxHeight="300.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                              <ImageView fx:id="banner" fitHeight="318.0" fitWidth="635.0" pickOnBounds="true" preserveRatio="true">
+                                  <image>
+                                      <Image url="@../images/banner.png" />
+                                  </image>
+                              </ImageView>
+                     </children>
+                  </HBox>
+                  <AnchorPane fx:id="menuContainer" layoutX="339.0" layoutY="265.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="230.0">
+                     <children>
+                              <Button layoutX="27.0" layoutY="26.0" mnemonicParsing="false" onAction="#onProjectClick" prefHeight="64.0" prefWidth="64.0">
+                                  <graphic>
+                                      <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                          <image>
+                                              <Image url="@../images/projectIcon.png" />
+                                          </image>
+                                      </ImageView>
+                                  </graphic>
+                              </Button>
+                              <Label layoutX="123.0" layoutY="26.0" text="Proyectos">
+                                  <font>
+                                      <Font name="System Bold" size="14.0" />
+                                  </font>
+                              </Label>
+                              <Button layoutX="28.0" layoutY="122.0" mnemonicParsing="false" onAction="#onOrganizationClick" prefHeight="64.0" prefWidth="64.0">
+                                  <graphic>
+                                      <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                          <image>
+                                              <Image url="@../images/organizationIcon.png" />
+                                          </image>
+                                      </ImageView>
+                                  </graphic>
+                              </Button>
+                              <Label layoutX="123.0" layoutY="122.0" text="Instituciones Ejecutoras">
+                                  <font>
+                                      <Font name="System Bold" size="14.0" />
+                                  </font>
+                              </Label>
+                     </children>
+                  </AnchorPane>
                     </children>
                 </AnchorPane>
             </content>
